--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
                     method: "POST",
                     body: formData
                 }).then((response) => {
-                    if (!response.ok) throw new Error('Network response was not ok.');
+                    if (!response.ok) throw new Error(`[${response.status}] Network response was not ok.`);
                     searchFile();
                 }).catch((error) => {
                     alert(error);
@@ -75,7 +75,7 @@
                     fetch(url, {
                         method: "DELETE"
                     }).then((response) => {
-                        if (!response.ok) throw new Error('Network response was not ok.');
+                        if (!response.ok) throw new Error(`[${response.status}] Network response was not ok.`);
                         searchFile();
                     }).catch((error) => {
                         alert(error);
@@ -88,7 +88,7 @@
                 const url = baseUrl;
                 fetch(url).then((response) => {
                     if (response.ok) return response.json();
-                    throw new Error('Network response was not ok.');
+                    throw new Error(`[${response.status}] Network response was not ok.`);
                 }).then((dataList) => {
                     let row = "";
                     if (dataList.length === 0) {
